add route to accept answered questionnaires
